# PowerSensor3

./: .buildinfo  .bumpversion.cfg  .editorconfig  .gitignore  .gitmodules  .readthedocs.yaml  .~lock.output.txt#  CHANGELOG  CITATION.cff  CMakeLists.txt  CONTRIBUTING.html  CPPLINT.cfg  INSTALLATION_DEVICE.html  INSTALLATION_HOST.html  Makefile  PowerSensor.cc  PowerSensor.h  README.md  Semaphore.h  USERGUIDE.html  _power_sensor_8hpp_source.html  _semaphore_8hpp_source.html  a.out  annotated.html  class_power_sensor_1_1_power_sensor-members.html  class_power_sensor_1_1_power_sensor.html  class_power_sensor_1_1_semaphore-members.html  class_power_sensor_1_1_semaphore.html  classes.html  dir_4f7e4242e27b8c8b476722507617a881.html  dir_e839221b911be9ca1d4935be85bedea2.html  dir_ee436fe9bbd694a1f99c2ca92ae2568f.html  files.html  functions.html  functions_func.html  functions_vars.html  genindex.html  index.html  objects.inv  output.txt  (+10 more)
.github/workflows/: build.yml  build_device.yml  build_device_windows.yml  build_host.yml  cffconvert.yml  cpplint.yml  documentation.yml  doxygen.yml  release.yml
Arduino/: PowerSensor.ino
Arduino/PowerSensor/: PowerSensor.ino
Arduino/PowerSensor_stm32f4/: platformio.ini
Arduino/powersensor/: powersensor.ino
Arduino/temp/: flash_helper.h
DOCS/: protocol.md
_sources/: INSTALLATION_DEVICE.md.txt  USERGUIDE.md.txt
api/: classPowerSensor3_1_1PowerSensor.html  classPowerSensor3_1_1Semaphore.html  class_view_hierarchy.html  dir_host.html  dir_host_include.html  dir_host_src.html  file_host_include_PowerSensor.hpp.html  file_host_include_Semaphore.hpp.html  file_host_src_PowerSensor.cc.html  file_host_src_sensors.cc.html  file_view_hierarchy.html  function_PowerSensor_8cc_1ad2274f347f0f7850aaeb575d09009619.html  function_PowerSensor_8hpp_1ac2ce7d60c052fe85935d22394913de14.html  function_PowerSensor_8hpp_1ae490411ea64641cf23f9ee5c17c3d31f.html  function_PowerSensor_8hpp_1ae6fc94932b6a4aef443528c842404a04.html  library_root.html  namespace_PowerSensor3.html  page_view_hierarchy.html  program_listing_file_host_include_PowerSensor.hpp.html  program_listing_file_host_include_Semaphore.hpp.html  program_listing_file_host_src_PowerSensor.cc.html  program_listing_file_host_src_sensors.cc.html  structPowerSensor3_1_1PowerSensor_1_1Sensor.html  structPowerSensor3_1_1PowerSensor_1_1SensorPair.html  structPowerSensor3_1_1PowerSensor_1_1Sensor_1_1EEPROM.html  structPowerSensor3_1_1State.html  unabridged_api.html  unabridged_orphan.html  variable_PowerSensor_8hpp_1a0937b653999b14c16d75fc408f4dce05.html  variable_PowerSensor_8hpp_1a3671c548db820b579e96778fbb9c583d.html  variable_PowerSensor_8hpp_1a4363b65a393b0ca493fa20d6c1e244c2.html  variable_PowerSensor_8hpp_1a4c021e360fe90ac735ac7eb7aaf57752.html  variable_PowerSensor_8hpp_1ab69949bfe080f3ea38645f0ff58ac91e.html  variable_PowerSensor_8hpp_1ac518d2e94791ccc6f84de95271e52c76.html  variable_PowerSensor_8hpp_1ad5f19dbc0cf42a2013d721d67522821c.html  variable_PowerSensor_8hpp_1adfbb9cfc8c3d695ba1444d7048257ee4.html  variable_PowerSensor_8hpp_1ae0c4657f6b5d13ad46465ee685a1fb1a.html  variable_PowerSensor_8hpp_1af9abdd8d4a87b5a2eb33f1f06a147056.html
device/: Makefile
device/Arduino/: Makefile  (+4 more)
docs/: CONFIGURATION.md  CONTRIBUTING.md  Doxyfile  INSTALLATION.md  INSTALLATION_DEVICE.md  INSTALLATION_HOST.md  USERGUIDE.md  conf.py  index.rst  requirements.txt
emulator/: CMakeLists.txt
host/: .pstest.cc.swp  CMakeLists.txt  Makefile  PowerSensor.cc  PowerSensor.h  PowerSensor.h.gch.REMOVED.git-id  a.out  compile.sh  compile.txt  output.txt  output.txt.REMOVED.git-id  psconfig.cc  psraw.cc  psrun.cc  pstest.cc  test.sh  wrapper.cu  wrapper.cuh
host/gpu_test/: pstest  pstest.cu
host/include/: PowerSensor.h  PowerSensor.hpp  Semaphore.hpp
host/src/: PowerSensor.cc  psconfig.cc  psinfo.cc  psrun.cc  pstest.cc  sensors.cc  test_ps.cc
patch/: cdc_queue.patch
python/: CMakeLists.txt  Makefile  PyPowerSensor.cc  __init__.py  create_fontmaps.py  get_arduino_stm32_directory.py  test.py
python/dashboard/: app.py  callbacks.py  requirements.txt
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_d.js  classes_1.js  classes_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  searchdata.js  variables_1.js  variables_2.js  variables_4.js
src/: arduino.cc
test/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  measurespeeds.py
testdata/: output1.txt.REMOVED.git-id
testoutput/: 10sec.txt.REMOVED.git-id  1sec.txt  2sec.txt  3sec.txt.REMOVED.git-id  4sec.txt.REMOVED.git-id  5sec.txt.REMOVED.git-id  6sec.txt.REMOVED.git-id  7sec.txt.REMOVED.git-id  8sec.txt.REMOVED.git-id  9sec.txt.REMOVED.git-id  output.txt  output.txt.REMOVED.git-id  output1.txt  output2.txt
(+164 files in other folders)
